--- a/mm.html
+++ b/mm.html
@@ -22,10 +22,10 @@
 
 <div class="middles">
   <img  class="rakshu" src="mm1.png" alt="Muthumari's image">
-  <h2> Hello </h2>
+  <h2> Hello! </h2>
   <p class="intro">I am a web developer and I &hearts; juice and tea</p>
   <hr>
-  <h2> My Skills. </h2>
+  <h2> My Skills </h2>
     <div class="skill-row">
       <img class="skill" src="giphy.gif" alt="code-img">
       <h3>Design & Development</h3>
