--- a/mm.html
+++ b/mm.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Muthumari profile</title>
+    <title>Muthumari Balamurugan</title>
   </head>
   <link rel="icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
@@ -13,7 +13,7 @@
     <img class="cloud" src="cloud.png" alt="cloud"width="150px" height="150px" >
 
     <a class="footer" href="https://drive.google.com/file/d/1l2_CJjSp4HmL2KlfgIOXMQF1LnZhOyBk/view?usp=sharing"> <h1> I'm Muthumari </h1> </a>
-    <h2>  I'm an Engineer </h2>
+    <h2>  I'm a Developer </h2>
     <img class="cloud1" src="cloud.png" alt="cloud" width="150px" height="150px">
     <img class="mountain" src="mountain.png" alt="mountain"  >
 </div>
@@ -22,14 +22,14 @@
 
 <div class="middles">
   <img  class="rakshu" src="mm1.png" alt="Muthumari's image">
-  <h2> Hello! </h2>
-  <p class="intro">I am a web developer and I &hearts; juice and tea</p>
+  <h2> Hey,Hi! </h2>
+   <p class="intro">I am an Engineer,currently working as developer in Aptean Technologies,Madurai</p>
   <hr>
-  <h2> My Skills </h2>
+  <h2> My Posiive Traits </h2>
     <div class="skill-row">
       <img class="skill" src="giphy.gif" alt="code-img">
-      <h3>Design & Development</h3>
-      <p>I started learning to code when I was 12 years old because I wanted to make my own video games. Over time, I have gained a wealth of experience designing and developing mobile and web applications.</p>
+      <h3>Development</h3>
+     <p>I started learning to code(Html,css)when I was 13 years old because I wanted to make new websie for my school.and also have gained a wealth of experience designing and developing web applications.</p>
     </div>
 <hr>
 
@@ -44,7 +44,7 @@
     <h2> Get In Touch </h2>
     <h3>If you love maths as much as I do.</h3>
     <p class="contact-message">Let's talk about how awesome they are! We can code while we can solve tricky puzzles!</p>
-    <a class="btn" href="mailto:muthumarib13@gmail.com"> CONTACT ME </a>
+    <a class="btn" href="mailto:muthumarib13@gmail.com"> PING ME </a>
     </div>
 
 
@@ -53,7 +53,7 @@
 <a class="footer" href="https://www.linkedin.com/in/muthumari-balamurugan-b51623182/"> LinkedIn </a>
 <a  class="footer" href="https://mobile.twitter.com/rakshurk12">Twitter </a>
 <a href="https://myaccount.google.com/u/1/personal-info?gar=1"> Google+ </a>
-<p class="copyright">&copy; 2021 Muthumari Balamurugan @ web developer </p>
+<p class="copyright">&copy; 2022 Muthumari Balamurugan @ developer </p>
 </div>
 </body>
 </html>
