--- a/mm.html
+++ b/mm.html
@@ -15,20 +15,20 @@
     <a class="footer" href="https://drive.google.com/file/d/1l2_CJjSp4HmL2KlfgIOXMQF1LnZhOyBk/view?usp=sharing"> <h1> I'm Muthumari </h1> </a>
     <h2>  I'm a Developer </h2>
     <img class="cloud1" src="cloud.png" alt="cloud" width="150px" height="150px">
-    <img class="mountain" src="mountain.png" alt="mountain"  >
+   
 </div>
 
 
 
 <div class="middles">
   <img  class="rakshu" src="mm1.png" alt="Muthumari's image">
-  <h2> Hey,Hi! </h2>
+  <h2> Vanakam! </h2>
    <p class="intro">I am an Engineer,currently working as developer in Aptean Technologies,Madurai</p>
   <hr>
-  <h2> My Posiive Traits </h2>
+  <h2> My Positive Traits </h2>
     <div class="skill-row">
       <img class="skill" src="giphy.gif" alt="code-img">
-      <h3>Development</h3>
+      <h3>Development-Career started</h3>
      <p>I started learning to code(Html,css)when I was 13 years old because I wanted to make new websie for my school.and also have gained a wealth of experience designing and developing web applications.</p>
     </div>
 <hr>
