--- a/mm.html
+++ b/mm.html
@@ -15,6 +15,7 @@
     <a class="footer" href="https://drive.google.com/file/d/1l2_CJjSp4HmL2KlfgIOXMQF1LnZhOyBk/view?usp=sharing"> <h1> I'm Muthumari </h1> </a>
     <h2>  I'm a Developer </h2>
     <img class="cloud1" src="cloud.png" alt="cloud" width="150px" height="150px">
+   <img class="mountain" src="mountain.png" alt="mountain"  >
    
 </div>
 
